--- a/app/src/main/res/layout/activity_biometria.xml
+++ b/app/src/main/res/layout/activity_biometria.xml
@@ -37,36 +37,16 @@ android:orientation="vertical">
 </com.google.android.material.textfield.TextInputLayout>
 
     <EditText
-        android:id="@+id/et_nome"
+        android:id="@+id/et_peso"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Nome"
+        android:hint="Peso"
         android:inputType="textPersonName" />
 
     <EditText
-    android:id="@+id/et_profissao"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="8dp"
-    android:ems="10"
-    android:hint="Profissão"
-    android:inputType="textPersonName" />
-
-<EditText
-    android:id="@+id/et_peso"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="8dp"
-    android:ems="10"
-    android:hint="Peso"
-    android:inputType="textPersonName" />
-
-<EditText
     android:id="@+id/et_data_nascimento"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -77,36 +57,15 @@ android:orientation="vertical">
     android:hint="Data de nascimento"
     android:inputType="textPersonName" />
 
-
-
-<EditText
-    android:id="@+id/et_email"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:ems="10"
-    android:hint="E-mail"
-    android:inputType="textPersonName" />
-
-<EditText
-    android:id="@+id/et_senha"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="8dp"
-    android:ems="10"
-    android:hint="Senha"
-    android:inputType="textPersonName" />
-
-<EditText
-    android:id="@+id/et_altura"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="8dp"
-    android:ems="10"
-    android:hint="Altura"
-    android:inputType="textPersonName" />
+    <Spinner
+        android:id="@+id/spinner_atividades"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:entries="@array/atividades"
+        android:background="@drawable/edit_text_background"
+        android:padding="16dp"/>
 
 <Button
     android:id="@+id/bt_gravar"
