--- a/app/src/main/res/layout/activity_novo_usuario.xml
+++ b/app/src/main/res/layout/activity_novo_usuario.xml
@@ -55,7 +55,7 @@
         android:layout_height="wrap_content">
 
         <EditText
-            android:id="@+id/et_nome"
+            android:id="@+id/et_peso"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
